--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <script>
-alert("点击播放")
+alert("加载完成后，点击播放")
     
 </script>
 
@@ -25,6 +25,10 @@ alert("点击播放")
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .video{
+        width: 80%;
+        height: 60%;
     }
 </style>
 
